--- a/WebContent/WEB-INF/zul/crawler/database/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/crawl.zul
@@ -14,21 +14,20 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="dbCrawlList"
-	use="com.jaeksoft.searchlib.web.controller.crawler.database.DatabaseCrawlListController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('dbCrawlList') @init('com.jaeksoft.searchlib.web.controller.crawler.database.DatabaseCrawlListController')">
 
 	<panel
 		title="List of existing database crawl - click on an crawl name to edit it"
-		border="normal" visible="@{dbCrawlList.notEditing}">
+		border="normal" visible="@load(dbCrawlList.notEditing)">
 		<toolbar>
-			<button label="Refresh" forward="onListRefresh" />
+			<button label="Refresh" onClick="@command('onListRefresh')" />
 			<space />
-			<button label="New crawl..." forward="onNew" />
+			<button label="New crawl..." onClick="@command('onNew')" />
 		</toolbar>
 		<panelchildren>
-			<listbox id="crawllistbox"
-				model="@{dbCrawlList.databaseCrawlList.array}" mold="paging"
-				pageSize="20">
+			<listbox model="@load(dbCrawlList.databaseCrawlList.array)"
+				mold="paging" pageSize="20">
 				<listhead>
 					<listheader label="Name" />
 					<listheader label="Last execution time"
@@ -40,52 +39,46 @@
 					<listheader label="Action" width="150px"
 						align="center" />
 				</listhead>
-				<listitem self="@{each=dbcrawlitem}">
-					<listcell label="@{dbcrawlitem.name}" />
-					<listcell
-						label="@{dbcrawlitem.lastCrawlThread.startTime,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
-					<listcell
-						label="@{dbcrawlitem.lastCrawlThread.lastReplicationThread.duration,converter='com.jaeksoft.searchlib.web.converter.DurationConverter'}" />
-					<listcell
-						tooltiptext="@{dbcrawlitem.lastCrawlThread.info}"
-						label="@{dbcrawlitem.lastCrawlThread.status}" />
-					<listcell
-						label="@{dbcrawlitem.lastCrawlThread.countInfo}" />
-					<listcell>
-						<hbox align="center">
-							<button
-								tooltiptext="Edit the database crawl" label="Edit"
-								onClick="dbCrawlList.edit(self)">
-								<custom-attributes
-									dbcrawlitem="@{dbcrawlitem}" />
-							</button>
-							<space />
-							<button
-								tooltiptext="Execute the crawl process"
-								disabled="@{dbcrawlitem.crawlThread}"
-								image="/images/action_check.png"
-								onClick="dbCrawlList.execute(self)">
-								<custom-attributes
-									dbcrawlitem="@{dbcrawlitem}" />
-							</button>
-							<space />
-							<button tooltiptext="Delete crawl process"
-								image="/images/action_delete.png"
-								onClick="dbCrawlList.delete(self)">
-								<custom-attributes
-									dbcrawlitem="@{dbcrawlitem}" />
-							</button>
-						</hbox>
-					</listcell>
-				</listitem>
+				<template name="model" var="dbcrawlitem">
+					<listitem>
+						<listcell label="@load(dbcrawlitem.name)" />
+						<listcell
+							label="@load(dbcrawlitem.lastCrawlThread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+						<listcell
+							label="@load(dbcrawlitem.lastCrawlThread.duration) @converter('com.jaeksoft.searchlib.web.converter.DurationConverter')" />
+						<listcell
+							tooltiptext="@load(dbcrawlitem.lastCrawlThread.info)"
+							label="@load(dbcrawlitem.lastCrawlThread.status.name)" />
+						<listcell
+							label="@load(dbcrawlitem.lastCrawlThread.countInfo)" />
+						<listcell>
+							<hbox align="center">
+								<button
+									tooltiptext="Edit the database crawl" label="Edit"
+									onClick="@command('edit', dbcrawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Execute the crawl process"
+									disabled="@load(dbcrawlitem.crawlThread)"
+									image="/images/action_check.png"
+									onClick="@command('execute', dbcrawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Delete crawl process"
+									image="/images/action_delete.png"
+									onClick="@command('delete', dbcrawlitem=dbcrawlitem)" />
+							</hbox>
+						</listcell>
+					</listitem>
+				</template>
 			</listbox>
 		</panelchildren>
 	</panel>
 
 	<separator height="10" />
 
-	<panel title="@{dbCrawlList.currentEditMode}" border="normal"
-		visible="@{dbCrawlList.editing}">
+	<panel title="@load(dbCrawlList.currentEditMode)" border="normal"
+		visible="@load(dbCrawlList.editing)">
 		<panelchildren>
 			<tabbox>
 				<tabs>
@@ -105,56 +98,68 @@
 								<row>
 									<label value="Name: " />
 									<textbox
-										value="@{dbCrawlList.currentCrawl.name}"
-										readonly="@{dbCrawlList.selected}" width="80%" />
+										value="@bind(dbCrawlList.currentCrawl.name)"
+										readonly="@load(dbCrawlList.selected)" width="80%" />
 									<label value="Choose a name" />
 								</row>
 								<row>
 									<label value="Driver class: " />
 									<combobox width="300px"
-										autodrop="true" model="@{dbCrawlList.driverClassList}"
+										autodrop="true" model="@load(dbCrawlList.driverClassList)"
 										buttonVisible="false"
-										value="@{dbCrawlList.currentCrawl.driverClass}" />
+										value="@bind(dbCrawlList.currentCrawl.driverClass)">
+										<template name="model">
+											<comboitem
+												label="@load(each)" />
+										</template>
+									</combobox>
 									<label
 										value="Enter the class name of the JDBC driver" />
 								</row>
 								<row>
 									<label value="JDBC url: " />
 									<textbox
-										value="@{dbCrawlList.currentCrawl.url}" width="95%" />
+										value="@bind(dbCrawlList.currentCrawl.url)" width="95%" />
 									<label
 										value="Enter the URL used to connect to the database" />
 								</row>
 								<row>
 									<label value="Isolation level: " />
 									<listbox mold="select"
-										selectedItem="@{dbCrawlList.currentCrawl.isolationLevel}"
-										model="@{dbCrawlList.isolationLevels}" />
+										selectedItem="@bind(dbCrawlList.currentCrawl.isolationLevel)"
+										model="@load(dbCrawlList.isolationLevels)">
+										<template name="model">
+											<listitem
+												label="@load(each)" />
+										</template>
+									</listbox>
 									<label
 										value="Select the isolation level" />
 								</row>
 								<row>
 									<label value="User: " />
 									<textbox
-										value="@{dbCrawlList.currentCrawl.user}" width="50%" />
+										value="@bind(dbCrawlList.currentCrawl.user)" width="50%" />
 									<label
 										value="Enter the user name for the database connection" />
 								</row>
 								<row>
 									<label value="Password: " />
 									<textbox type="password"
-										value="@{dbCrawlList.currentCrawl.password}" width="50%" />
+										value="@bind(dbCrawlList.currentCrawl.password)" width="50%" />
 									<label
 										value="Enter the password for the database connection" />
 								</row>
 								<row>
 									<label value="Language: " />
 									<listbox mold="select"
-										selectedItem="@{dbCrawlList.currentCrawl.lang}"
-										model="@{dbCrawlList.languageEnum}">
-										<listitem
-											self="@{each=langEnum}" label="@{langEnum.name}"
-											value="@{langEnum}" />
+										selectedItem="@bind(dbCrawlList.currentCrawl.lang)"
+										model="@load(dbCrawlList.languageEnum)">
+										<template name="model"
+											var="langEnum">
+											<listitem
+												label="@load(langEnum.name)" />
+										</template>
 									</listbox>
 									<label
 										value="Enter the language of the indexed documents" />
@@ -162,14 +167,15 @@
 								<row>
 									<label value="Buffer size: " />
 									<intbox cols="5"
-										value="@{dbCrawlList.currentCrawl.bufferSize}" />
+										value="@bind(dbCrawlList.currentCrawl.bufferSize)" />
 									<label
 										value="Enter the size of the buffer" />
 								</row>
 								<row>
 									<label value="Primary key: " />
 									<textbox
-										value="@{dbCrawlList.currentCrawl.primaryKey}" width="50%" />
+										value="@bind(dbCrawlList.currentCrawl.primaryKey)"
+										width="50%" />
 									<label
 										value="Enter the primary key to identify unique document" />
 								</row>
@@ -177,7 +183,7 @@
 									<label
 										value="Unique key (for deletion): " />
 									<textbox
-										value="@{dbCrawlList.currentCrawl.uniqueKeyDeleteField}"
+										value="@bind(dbCrawlList.currentCrawl.uniqueKeyDeleteField)"
 										width="50%" />
 									<label
 										value="Enter the name of the column containing the unique key for documents to delete" />
@@ -185,7 +191,7 @@
 								<row>
 									<label value="SQL Select: " />
 									<textbox rows="10"
-										value="@{dbCrawlList.currentCrawl.sqlSelect}" width="95%" />
+										value="@bind(dbCrawlList.currentCrawl.sqlSelect)" width="95%" />
 									<label
 										value="Enter the SQL query to retrieve data" />
 								</row>
@@ -193,11 +199,17 @@
 									<label value="SQL Update: " />
 									<vlayout>
 										<textbox rows="5"
-											value="@{dbCrawlList.currentCrawl.sqlUpdate}" width="95%" />
+											value="@bind(dbCrawlList.currentCrawl.sqlUpdate)"
+											width="95%" />
 
 										<listbox mold="select"
-											selectedItem="@{dbCrawlList.currentCrawl.sqlUpdateMode}"
-											model="@{dbCrawlList.sqlUpdateModes}" />
+											selectedItem="@bind(dbCrawlList.currentCrawl.sqlUpdateMode)"
+											model="@load(dbCrawlList.sqlUpdateModes)">
+											<template name="model">
+												<listitem
+													label="@load(each)" />
+											</template>
+										</listbox>
 									</vlayout>
 									<label
 										value="Enter any SQL query which be called for each indexed item ($PK) " />
@@ -207,8 +219,8 @@
 					</tabpanel>
 					<tabpanel>
 						<listbox width="99%"
-							selectedItem="@{dbCrawlList.selectedField}"
-							model="@{dbCrawlList.currentCrawl.fieldMap.list}">
+							selectedItem="@bind(dbCrawlList.selectedField)"
+							model="@load(dbCrawlList.currentCrawl.fieldMap.list)">
 							<listhead>
 								<listheader label="SQL column"
 									align="center" width="180px" />
@@ -237,120 +249,124 @@
 							<auxhead>
 								<auxheader align="center">
 									<textbox width="95%"
-										value="@{dbCrawlList.sqlColumn}" />
+										value="@bind(dbCrawlList.sqlColumn)" />
 								</auxheader>
 								<auxheader align="center">
 									<listbox mold="select"
-										model="@{dbCrawlList.indexFieldList}"
-										selectedItem="@{dbCrawlList.selectedIndexField}">
-										<listitem
-											self="@{each='indexField'}" label="@{indexField.name}" />
+										model="@load(dbCrawlList.indexFieldList)"
+										selectedItem="@bind(dbCrawlList.selectedIndexField)">
+										<template name="model">
+											<listitem
+												label="@load(each)" />
+										</template>
 									</listbox>
 								</auxheader>
 								<auxheader align="center">
 									<checkbox tooltiptext="remove tags"
-										checked="@{dbCrawlList.currentFieldTarget.removeTag}" />
+										checked="@bind(dbCrawlList.currentFieldTarget.removeTag)" />
 								</auxheader>
 								<auxheader align="center">
 									<textbox width="95%"
 										tooltiptext="Regular expression find pattern"
-										value="@{dbCrawlList.currentFieldTarget.findRegexpTag}" />
+										value="@bind(dbCrawlList.currentFieldTarget.findRegexpTag)" />
 								</auxheader>
 								<auxheader align="center">
 									<textbox width="95%"
 										tooltiptext="Regular expression replace pattern"
-										value="@{dbCrawlList.currentFieldTarget.replaceRegexpTag}" />
+										value="@bind(dbCrawlList.currentFieldTarget.replaceRegexpTag)" />
 								</auxheader>
 								<auxheader align="center">
 									<checkbox
 										tooltiptext="convert HTML entities"
-										checked="@{dbCrawlList.currentFieldTarget.convertHtmlEntities}" />
+										checked="@bind(dbCrawlList.currentFieldTarget.convertHtmlEntities)" />
 								</auxheader>
 								<auxheader align="center">
 									<checkbox tooltiptext="File path"
-										checked="@{dbCrawlList.currentFieldTarget.filePath}" />
+										checked="@bind(dbCrawlList.currentFieldTarget.filePath)" />
 								</auxheader>
 								<auxheader align="center">
 									<textbox width="95%"
-										disabled="@{dbCrawlList.currentFieldTarget.notFilePath}"
-										value="@{dbCrawlList.currentFieldTarget.filePathPrefix}" />
+										disabled="@load(dbCrawlList.currentFieldTarget.notFilePath)"
+										value="@bind(dbCrawlList.currentFieldTarget.filePathPrefix)" />
 								</auxheader>
 								<auxheader align="center">
 									<checkbox
 										tooltiptext="Crawl the given URL"
-										checked="@{dbCrawlList.currentFieldTarget.crawlUrl}" />
+										checked="@bind(dbCrawlList.currentFieldTarget.crawlUrl)" />
 								</auxheader>
 								<auxheader align="center">
 									<hbox
-										visible="@{dbCrawlList.fieldSelected}">
+										visible="@load(dbCrawlList.fieldSelected)">
 										<button label="Cancel"
-											forward="onCancelField" />
+											onClick="@command('onCancelField')" />
 										<button label="Save"
-											forward="onSaveField" />
+											onClick="@command('onSaveField')" />
 									</hbox>
 									<hbox
-										visible="@{dbCrawlList.noFieldSelected}">
+										visible="@load(dbCrawlList.noFieldSelected)">
 										<button label="add"
-											forward="onSaveField" />
+											onClick="@command('onSaveField')" />
 									</hbox>
 								</auxheader>
 							</auxhead>
-							<listitem self="@{each='fieldlink'}">
-								<listcell
-									label="@{fieldlink.source.uniqueName}" />
-								<listcell label="@{fieldlink.target}" />
-								<listcell>
-									<checkbox disabled="true"
-										checked="@{fieldlink.target.removeTag}" />
-								</listcell>
-								<listcell
-									label="@{fieldlink.target.findRegexpTag}" />
-								<listcell
-									label="@{fieldlink.target.replaceRegexpTag}" />
-								<listcell>
-									<checkbox disabled="true"
-										checked="@{fieldlink.target.convertHtmlEntities}" />
-								</listcell>
-								<listcell>
-									<checkbox disabled="true"
-										checked="@{fieldlink.target.filePath}" />
-								</listcell>
-								<listcell
-									label="@{fieldlink.target.filePathPrefix}" />
-								<listcell>
-									<checkbox disabled="true"
-										checked="@{fieldlink.target.crawlUrl}" />
-								</listcell>
-								<listcell>
-									<button tooltiptext="Remove"
-										image="/images/action_delete.png"
-										onClick="dbCrawlList.removeLink(self)">
-										<custom-attributes
-											fieldlink="@{fieldlink}" />
-									</button>
-								</listcell>
-							</listitem>
+							<template name="model" var="fieldlink">
+								<listitem>
+									<listcell
+										label="@load(fieldlink.source.uniqueName)" />
+									<listcell
+										label="@load(fieldlink.target)" />
+									<listcell>
+										<checkbox disabled="true"
+											checked="@bind(fieldlink.target.removeTag)" />
+									</listcell>
+									<listcell
+										label="@load(fieldlink.target.findRegexpTag)" />
+									<listcell
+										label="@load(fieldlink.target.replaceRegexpTag)" />
+									<listcell>
+										<checkbox disabled="true"
+											checked="@load(fieldlink.target.convertHtmlEntities)" />
+									</listcell>
+									<listcell>
+										<checkbox disabled="true"
+											checked="@load(fieldlink.target.filePath)" />
+									</listcell>
+									<listcell
+										label="@load(fieldlink.target.filePathPrefix)" />
+									<listcell>
+										<checkbox disabled="true"
+											checked="@load(fieldlink.target.crawlUrl)" />
+									</listcell>
+									<listcell>
+										<button tooltiptext="Remove"
+											image="/images/action_delete.png"
+											onClick="@command('removeLink', fieldlink=fieldlink)" />
+									</listcell>
+								</listitem>
+							</template>
 						</listbox>
 					</tabpanel>
 				</tabpanels>
 			</tabbox>
 			<vbox width="100%" align="center">
-				<hbox visible="@{dbCrawlList.selected}">
-					<button label="Cancel" forward="onCancel" />
+				<hbox visible="@load(dbCrawlList.selected)">
+					<button label="Cancel"
+						onClick="@command('onCancel')" />
 					<space width="10px" />
-					<button label="Save" forward="onSave" />
+					<button label="Save" onClick="@command('onSave')" />
 					<space width="20px" />
-					<button label="New..." forward="onNew" />
+					<button label="New..." onClick="@command('onNew')" />
 				</hbox>
-				<hbox visible="@{dbCrawlList.notSelected}">
-					<button label="Cancel" forward="onCancel" />
-					<button label="Create" forward="onSave" />
+				<hbox visible="@load(dbCrawlList.notSelected)">
+					<button label="Cancel"
+						onClick="@command('onCancel')" />
+					<button label="Create" onClick="@command('onSave')" />
 				</hbox>
 			</vbox>
 
 		</panelchildren>
 	</panel>
 
-	<timer delay="5000" repeats="true" onTimer="dbCrawlList.onTimer()"
-		running="@{dbCrawlList.refresh}" />
+	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
+		running="@load(dbCrawlList.refresh)" />
 </window>
