--- a/WebContent/WEB-INF/zul/crawler/database/process.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/process.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,15 +14,16 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="dbCrawlProc"
-	use="com.jaeksoft.searchlib.web.controller.crawler.database.DatabaseCrawlProcessController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('dbCrawlProc') @init('com.jaeksoft.searchlib.web.controller.crawler.database.DatabaseCrawlProcessController')">
 	<panel title="Running processes" border="normal">
 		<toolbar>
 			<checkbox label="Show debug information"
-				visible="@{dbCrawlProc.admin}" checked="@{dbCrawlProc.debug}" />
+				visible="@load(dbCrawlProc.admin)"
+				checked="@bind(dbCrawlProc.debug)" />
 		</toolbar>
 		<panelchildren>
-			<listbox model="@{dbCrawlProc.crawlMaster.threads}"
+			<listbox model="@load(dbCrawlProc.crawlMaster.threads)"
 				mold="paging" pageSize="20">
 				<listhead sizable="true">
 					<listheader label="Name" />
@@ -31,24 +32,27 @@
 						label="Last execution time" />
 					<listheader width="100px" label="Pending" />
 					<listheader width="100px" label="Updated" />
-					<listheader visible="@{dbCrawlProc.debug}"
+					<listheader visible="@load(dbCrawlProc.debug)"
 						label="Debug" />
 				</listhead>
-				<listitem self="@{each=thread}">
-					<listcell label="@{thread.databaseCrawl.name}" />
-					<listcell label="@{thread.statusInfo}" />
-					<listcell
-						label="@{thread.startTime,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
-					<listcell
-						label="@{thread.pendingIndexDocumentCount}" />
-					<listcell
-						label="@{thread.updatedIndexDocumentCount}" />
-					<listcell visible="@{dbCrawlProc.debug}"
-						label="@{thread.debugInfo}" />
-				</listitem>
+				<template name="model" var="thread">
+					<listitem>
+						<listcell
+							label="@load(thread.databaseCrawl.name)" />
+						<listcell label="@load(thread.statusInfo)" />
+						<listcell
+							label="@load(thread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+						<listcell
+							label="@load(thread.pendingIndexDocumentCount)" />
+						<listcell
+							label="@load(thread.updatedIndexDocumentCount)" />
+						<listcell visible="@load(dbCrawlProc.debug)"
+							label="@load(thread.debugInfo)" />
+					</listitem>
+				</template>
 			</listbox>
 		</panelchildren>
 	</panel>
-	<timer delay="5000" repeats="true" onTimer="dbCrawlProc.onTimer()"
-		running="@{dbCrawlProc.refresh}" />
+	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
+		running="@load(dbCrawlProc.refresh)" />
 </window>
